@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-15T08:20:55Z",
-  "count" : 3,
-  "count_minmax" : [ 3, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "timestamp" : "2022-11-15T16:21:32Z",
+  "count" : 4,
+  "count_minmax" : [ 3, 4 ],
+  "count_decinc" : [ -0, +4 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
