@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-15T08:20:55Z",
-  "count_outdated" : 661,
-  "uniques_outdated" : 375,
-  "count" : 680,
+  "timestamp" : "2022-11-15T16:21:32Z",
+  "count_outdated" : 663,
+  "uniques_outdated" : 376,
+  "count" : 682,
   "uniques" : 385,
   "clones" : [
-    {
-      "timestamp": "2022-11-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-11-02T00:00:00Z",
       "count": 2,
@@ -56,8 +49,8 @@
     },
     {
       "timestamp": "2022-11-15T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
+      "count": 4,
+      "count_minmax": [ 3, 4 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
