@@ -3,11 +3,6 @@
   "uniques": 6,
   "clones": [
     {
-      "timestamp": "2022-11-01T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-11-02T00:00:00Z",
       "count": 2,
       "uniques": 2
@@ -39,7 +34,7 @@
     },
     {
       "timestamp": "2022-11-15T00:00:00Z",
-      "count": 3,
+      "count": 4,
       "uniques": 2
     }
   ]
